# balsa

./: .gitignore  CMakeLists.txt  README.md  log.txt  package.xml
action/: TrainModel.action
cfg/: Pid.cfg  PidConfig.cfg  adaptiveClbf.cfg  figureEight.cfg  params_core.yaml  pos_input_params.yaml
controller_adaptiveclbf/: CMakeLists.txt
controller_adaptiveclbf/cfg/: adaptiveClbf.cfg  figureEight.cfg
controller_adaptiveclbf/msg/: DebugData.msg
controller_adaptiveclbf/plotting/: adapt_compare_hw.py  plot_bagged_data.py
controller_adaptiveclbf/rviz/: racecar_sinusoid.rviz
controller_adaptiveclbf/scripts/: startup_sim.yaml
controller_adaptiveclbf/src/: adaptive_clbf.py  cbf.py  dyn_reconfig_server.py  encoder_odometry.py  figure_eight.py  model_gp.py  qp_solver.py  scaledgp.py  vanilla_nn.py
controller_adaptiveclbf/src/ALPaCA/: README.md  dataViz.py  dataset.py
include/: controllers.hpp
launch/: controller_adaptiveclbf.launch  controller_xmaxx.launch  encoder_odometry.launch  figure_eight.launch  model_service.launch  pos_input_xmaxx.launch
msg/: DebugData.msg  ParamsData.msg
plotting/: collision_avoid_hw.py
rviz/: rviz_hw.rviz  rviz_plotting.rviz
scripts/: barrier_formulas.m  cleanup.sh  rqt_multiplot.xml  run_controller.sh  set_physics_props.sh  startup_base.yaml  startup_hw.yaml  startup_sim.yaml
simulation_racecar/simulator/racecar-simulator/racecar_control/: CMakeLists.txt  package.xml
simulation_racecar/simulator/racecar-simulator/racecar_control/config/: racecar_control.yaml
simulation_racecar/simulator/racecar-simulator/racecar_control/launch/: racecar_control.launch
simulation_racecar/simulator/racecar-simulator/racecar_rviz/: CMakeLists.txt  package.xml
simulation_racecar/simulator/racecar-simulator/racecar_rviz/launch/: view_racecar.launch
simulation_racecar/simulator/racecar-simulator/racecar_rviz/rviz/: racecar.rviz
simulation_racecar/traxxas_interface/: CMakeLists.txt  package.xml
simulation_racecar/traxxas_interface/config/: f110.yaml  stampede.yaml  teleop_twist_joy_config_xmaxx.yaml  twist_mux_locks.yaml  twist_mux_topics.yaml  xmaxx.rviz
simulation_racecar/traxxas_interface/launch/: f110_sim.launch  stampede.launch
simulation_racecar/traxxas_interface/scripts/: cmd_vel_to_ackermann_drive.py  deprec_ackermann_pid.py  deprec_ackermann_step_inputs.py  deprec_odometry_to_ackermann.py  record_xmaxx.sh  startup_sim.yaml  startup_xmaxx.yaml  teach_waypoints.py
simulation_racecar/traxxas_interface/teach_paths/: waypoints2.bag  waypoints3.bag  waypoints4.bag  waypoints5.bag  waypoints6.bag
src/: adaptive_clbf.py  adaptive_clbf_node.py  bag_data.py  cbf.py  controller_xmaxx.cpp  dynamics.py  figure_eight.py  lyapunov.py  model_service.py  plot_bagged_data.py  pos_input_xmaxx.cpp  qp_solver.py  test_adaptive_clbf.py  untitled.cpp  vanilla_nn.py
src/ALPaCA/: alpaca.py
srv/: AddData2Model.srv  PredictModel.srv
(+15 files in other folders)
